Bug 178175 - ktorrent crash when deleting torrent
Summary: ktorrent crash when deleting torrent
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-19 14:56 UTC by Cristi
Modified: 2008-12-21 12:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristi 2008-12-19 14:56:13 UTC
Version:           3.2dev (using Devel)
Compiler:          x86_64-pc-linux-gnu-4.3.2 
OS:                Linux
Installed from:    Compiled sources

Well everytime I try to delete a torrent ktorrent crashes, upon restart that torrent is still in the list. Here is the backtrace:
KTorrent (ktorrent), signal SIGABRT
0x00007f1117ee8d91 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 2367)]                      

Thread 3 (Thread 0x7f1107db9950 (LWP 2425)):
#0  0x00007f1117f109b6 in poll () from /lib/libc.so.6
#1  0x00007f1117b66a2d in net::DownloadThread::waitForSocketReady () from /usr/kde/svn/lib64/libbtcore.so.8
#2  0x00007f1117b66a9c in net::DownloadThread::update () from /usr/kde/svn/lib64/libbtcore.so.8            
#3  0x00007f1117b67491 in net::NetworkThread::run () from /usr/kde/svn/lib64/libbtcore.so.8                
#4  0x00007f1119716152 in QThreadPrivate::start (arg=0x230df30) at thread/qthread_unix.cpp:191             
#5  0x00007f11194a1007 in start_thread () from /lib/libpthread.so.0                                        
#6  0x00007f1117f1934d in clone () from /lib/libc.so.6                                                     
#7  0x0000000000000000 in ?? ()                                                                            

Thread 2 (Thread 0x7f11075b8950 (LWP 2426)):
#0  0x00007f11194a4db9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f11197172b5 in QWaitCondition::wait (this=0x230e8a8, mutex=0x230e8b0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88                                                                                                          
#2  0x00007f1117b66573 in net::UploadThread::update () from /usr/kde/svn/lib64/libbtcore.so.8                                
#3  0x00007f1117b67491 in net::NetworkThread::run () from /usr/kde/svn/lib64/libbtcore.so.8                                  
#4  0x00007f1119716152 in QThreadPrivate::start (arg=0x230e840) at thread/qthread_unix.cpp:191                               
#5  0x00007f11194a1007 in start_thread () from /lib/libpthread.so.0                                                          
#6  0x00007f1117f1934d in clone () from /lib/libc.so.6                                                                       
#7  0x0000000000000000 in ?? ()                                                                                              

Thread 1 (Thread 0x7f111b037750 (LWP 2367)):
[KCrash Handler]                            
#5  0x00007f1117e7b1f5 in raise () from /lib/libc.so.6
#6  0x00007f1117e7c713 in abort () from /lib/libc.so.6
#7  0x00007f111970d40d in qt_message_output (msgType=QtFatalMsg, buf=<value optimized out>) at global/qglobal.cpp:2108
#8  0x00007f111970d547 in qFatal (msg=<value optimized out>) at global/qglobal.cpp:2309                               
#9  0x00007f1118ffccd7 in QSortFilterProxyModelPrivate::remove_proxy_interval (this=0x2993930, source_to_proxy=@0x25bcfd0, proxy_to_source=@0x25bcfc0, proxy_start=7, proxy_end=45925424,                                                                 
    proxy_parent=@0x7f11181999d0, orient=Qt::Vertical, emit_signal=true) at ../../include/QtCore/../../src/corelib/tools/qvector.h:343                                                                                                                    
#10 0x00007f1118ffcf15 in QSortFilterProxyModelPrivate::remove_source_items (this=0x2993930, source_to_proxy=@0x25bcfd0, proxy_to_source=@0x25bcfc0, source_items=<value optimized out>,                                                                  
    source_parent=<value optimized out>, orient=Qt::Vertical, emit_signal=true) at itemviews/qsortfilterproxymodel.cpp:435   
#11 0x00007f1118ffd129 in QSortFilterProxyModelPrivate::source_items_about_to_be_removed (this=0x2993930, source_parent=@0x7fff2307aff0, start=2, end=2, orient=Qt::Vertical)                                                                             
    at itemviews/qsortfilterproxymodel.cpp:720                                                                               
#12 0x00007f1119002c22 in QSortFilterProxyModel::qt_metacall (this=0x2993900, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff2307af60)                                                                                             
    at .moc/debug-shared/moc_qsortfilterproxymodel.cpp:126                                                                   
#13 0x00007f111981ed3c in QMetaObject::activate (sender=0x2469690, from_signal_index=<value optimized out>, to_signal_index=10, argv=0xffffffffffffffff) at kernel/qobject.cpp:3028                                                                       
#14 0x00007f1119856ca4 in QAbstractItemModel::rowsAboutToBeRemoved (this=0x93f, _t1=<value optimized out>, _t2=2, _t3=2) at .moc/debug-shared/moc_qabstractitemmodel.cpp:164                                                                              
#15 0x00007f1119802f41 in QAbstractItemModel::beginRemoveRows (this=0x2469690, parent=@0x7fff2307aff0, first=2, last=2) at kernel/qabstractitemmodel.cpp:2130                                                                                             
#16 0x000000000043f109 in kt::ViewModel::removeRows ()                                                                       
#17 0x00000000004415f4 in kt::ViewModel::removeTorrent ()                                                                    
#18 0x0000000000441671 in kt::ViewModel::qt_metacall ()                                                                      
#19 0x00007f111981ed3c in QMetaObject::activate (sender=0x2432050, from_signal_index=<value optimized out>, to_signal_index=6, argv=0xffffffffffffffff) at kernel/qobject.cpp:3028                                                                        
#20 0x00007f111ac1cf22 in kt::CoreInterface::torrentRemoved () from /usr/kde/svn/lib64/libktcore.so.7                        
#21 0x000000000042b3cf in kt::Core::remove ()                                                                                
#22 0x0000000000430bf8 in kt::Core::qt_metacall ()                                                                           
#23 0x00007f111981ed3c in QMetaObject::activate (sender=0x29864c0, from_signal_index=<value optimized out>, to_signal_index=91, argv=0xffffffffffffffff) at kernel/qobject.cpp:3028                                                                       
#24 0x000000000043a63b in kt::View::wantToRemove ()                                                                          
#25 0x000000000043d57a in kt::View::removeTorrents ()                                                                        
#26 0x0000000000445435 in kt::ViewManager::qt_metacall ()                                                                    
#27 0x00007f111981ed3c in QMetaObject::activate (sender=0x246e3c0, from_signal_index=<value optimized out>, to_signal_index=6, argv=0xffffffffffffffff) at kernel/qobject.cpp:3028                                                                        
#28 0x00007f1118ad0e57 in QAction::triggered (this=0x93f, _t1=false) at .moc/debug-shared/moc_qaction.cpp:216                
#29 0x00007f1118ad15f4 in QAction::activate (this=0x246e3c0, event=<value optimized out>) at kernel/qaction.cpp:1131         
#30 0x00007f1118e08bca in QAbstractButtonPrivate::click (this=0x2557e50) at widgets/qabstractbutton.cpp:526                  
#31 0x00007f1118e08e65 in QAbstractButton::mouseReleaseEvent (this=0x25264a0, e=0x7fff2307c0c0) at widgets/qabstractbutton.cpp:1116                                                                                                                       
#32 0x00007f1118ed7e8a in QToolButton::mouseReleaseEvent (this=0x93f, e=0x93f) at widgets/qtoolbutton.cpp:677                
#33 0x00007f1118b2e989 in QWidget::event (this=0x25264a0, event=0x7fff2307c0c0) at kernel/qwidget.cpp:7169                   
#34 0x00007f1118ad6f4d in QApplicationPrivate::notify_helper (this=0x233a940, receiver=0x25264a0, e=0x7fff2307c0c0) at kernel/qapplication.cpp:3809                                                                                                       
#35 0x00007f1118ade5d4 in QApplication::notify (this=<value optimized out>, receiver=0x25264a0, e=0x7fff2307c0c0) at kernel/qapplication.cpp:3534                                                                                                         
#36 0x00007f111a8123a6 in KApplication::notify (this=0x7fff2307cd60, receiver=0x25264a0, event=0x7fff2307c0c0)               
    at /var/tmp/paludis/kde-base-kdelibs-scm/work/kdelibs-scm/kdeui/kernel/kapplication.cpp:307                              
#37 0x00007f1119807c2e in QCoreApplication::notifyInternal (this=0x7fff2307cd60, receiver=0x25264a0, event=0x7fff2307c0c0) at kernel/qcoreapplication.cpp:593                                                                                             
#38 0x00007f1118adfa12 in QApplicationPrivate::sendMouseEvent (receiver=0x25264a0, event=0x7fff2307c0c0, alienWidget=0x25264a0, nativeWidget=0x241b270, buttonDown=<value optimized out>,                                                                 
    lastMouseReceiver=@0x7f1119497750) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218               
#39 0x00007f1118b47cf1 in QETWidget::translateMouseEvent (this=0x241b270, event=<value optimized out>) at kernel/qapplication_x11.cpp:4048                                                                                                                
#40 0x00007f1118b4673c in QApplication::x11ProcessEvent (this=0x7fff2307cd60, event=0x7fff2307c990) at kernel/qapplication_x11.cpp:3166                                                                                                                   
#41 0x00007f1118b6c2ec in x11EventSourceDispatch (s=0x2336720, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148                                                                                                                      
#42 0x00007f11131ff031 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0                                          
#43 0x00007f111320270d in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0                                           
#44 0x00007f11132028cb in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0                                         
#45 0x00007f11198327ff in QEventDispatcherGlib::processEvents (this=0x2327ee0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:325
#46 0x00007f1118b6ba5f in QGuiEventDispatcherGlib::processEvents (this=0x93f, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#47 0x00007f1119806832 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 587713664}) at kernel/qeventloop.cpp:149
#48 0x00007f11198069bd in QEventLoop::exec (this=0x7fff2307ccc0, flags={i = 587713744}) at kernel/qeventloop.cpp:200
#49 0x00007f1119808efd in QCoreApplication::exec () at kernel/qcoreapplication.cpp:851
#50 0x0000000000423773 in main ()
Comment 1 Cristi 2008-12-19 14:57:04 UTC
this happens with a recent version of svn
Comment 2 Joris Guisson 2008-12-21 12:54:05 UTC
SVN commit 899599 by guisson:

Fix crash when removing torrent 

BUG: 178175

 M  +1 -0      ChangeLog  
 M  +1 -0      ktorrent/viewmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=899599