Fix crash when removing torrent

BUG: 178175

svn path=/trunk/extragear/network/ktorrent/; revision=899599